improvement Group class